Refactored useless DBRef annotations. Deleted unecessary repos, services and controllers, since I am embedding them now, instead of DBRef. Added ChannelCluster logic.